uploaded other notebooks for: CNN variations, P-ATN and EAT Defence

--- a/notebook/CNN_Code/CNN_Target_Model-Simple1.ipynb
+++ b/notebook/CNN_Code/CNN_Target_Model-Simple1.ipynb
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "# !pip install tensorflow-datasets"
+    "!pip install tensorflow-datasets"
    ]
   },
   {
@@ -61,19 +61,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-12 20:10:53.867063: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2025-01-12 19:58:33.154456: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-01-12 20:10:54.012848: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-01-12 20:10:54.819050: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/lib:/usr/local/nvidia/lib:/usr/local/nvidia/lib64\n",
-      "2025-01-12 20:10:54.819125: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/lib:/usr/local/nvidia/lib:/usr/local/nvidia/lib64\n",
-      "2025-01-12 20:10:54.819130: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2025-01-12 19:58:33.326587: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-01-12 19:58:34.130355: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/lib:/usr/local/nvidia/lib:/usr/local/nvidia/lib64\n",
+      "2025-01-12 19:58:34.130436: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/lib:/usr/local/nvidia/lib:/usr/local/nvidia/lib64\n",
+      "2025-01-12 19:58:34.130441: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "# import tensorflow_datasets as tfds\n",
-    "# from tensorflow.keras import layers, models"
+    "import tensorflow_datasets as tfds\n",
+    "from tensorflow.keras import layers, models"
    ]
   },
   {
@@ -94,14 +94,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-12 20:11:02.353646: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 12688 MB memory:  -> device: 0, name: NVIDIA A16, pci bus id: 0000:1b:00.0, compute capability: 8.6\n",
-      "2025-01-12 20:11:02.355907: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 13232 MB memory:  -> device: 1, name: NVIDIA A16, pci bus id: 0000:1c:00.0, compute capability: 8.6\n",
-      "2025-01-12 20:11:02.357967: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:2 with 13232 MB memory:  -> device: 2, name: NVIDIA A16, pci bus id: 0000:1d:00.0, compute capability: 8.6\n",
-      "2025-01-12 20:11:02.360025: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:3 with 13232 MB memory:  -> device: 3, name: NVIDIA A16, pci bus id: 0000:1e:00.0, compute capability: 8.6\n",
-      "2025-01-12 20:11:02.362134: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:4 with 13232 MB memory:  -> device: 4, name: NVIDIA A16, pci bus id: 0000:ce:00.0, compute capability: 8.6\n",
-      "2025-01-12 20:11:02.364300: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:5 with 13232 MB memory:  -> device: 5, name: NVIDIA A16, pci bus id: 0000:cf:00.0, compute capability: 8.6\n",
-      "2025-01-12 20:11:02.366894: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:6 with 13232 MB memory:  -> device: 6, name: NVIDIA A16, pci bus id: 0000:d0:00.0, compute capability: 8.6\n",
-      "2025-01-12 20:11:02.369667: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:7 with 13232 MB memory:  -> device: 7, name: NVIDIA A16, pci bus id: 0000:d1:00.0, compute capability: 8.6\n"
+      "2025-01-12 19:58:41.512229: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 13232 MB memory:  -> device: 0, name: NVIDIA A16, pci bus id: 0000:1b:00.0, compute capability: 8.6\n",
+      "2025-01-12 19:58:41.514535: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 13232 MB memory:  -> device: 1, name: NVIDIA A16, pci bus id: 0000:1c:00.0, compute capability: 8.6\n",
+      "2025-01-12 19:58:41.516554: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:2 with 13232 MB memory:  -> device: 2, name: NVIDIA A16, pci bus id: 0000:1d:00.0, compute capability: 8.6\n",
+      "2025-01-12 19:58:41.518706: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:3 with 13232 MB memory:  -> device: 3, name: NVIDIA A16, pci bus id: 0000:1e:00.0, compute capability: 8.6\n",
+      "2025-01-12 19:58:41.520808: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:4 with 13232 MB memory:  -> device: 4, name: NVIDIA A16, pci bus id: 0000:ce:00.0, compute capability: 8.6\n",
+      "2025-01-12 19:58:41.522915: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:5 with 13232 MB memory:  -> device: 5, name: NVIDIA A16, pci bus id: 0000:cf:00.0, compute capability: 8.6\n",
+      "2025-01-12 19:58:41.525634: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:6 with 13232 MB memory:  -> device: 6, name: NVIDIA A16, pci bus id: 0000:d0:00.0, compute capability: 8.6\n",
+      "2025-01-12 19:58:41.528376: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:7 with 13232 MB memory:  -> device: 7, name: NVIDIA A16, pci bus id: 0000:d1:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
     "x = tf.keras.Input(shape=(input_height, input_width, input_channels))\n",
     "y = tf.keras.Input(shape=(n_out,))\n",
     "#pred is the model\n",
-    "model=build_model(\"variation\")\n"
+    "model=build_model(\"simple\")\n"
    ]
   },
   {
@@ -393,49 +393,49 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-12 20:11:05.118957: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:428] Loaded cuDNN version 8400\n",
-      "2025-01-12 20:11:06.582127: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
+      "2025-01-12 19:58:44.246749: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:428] Loaded cuDNN version 8400\n",
+      "2025-01-12 19:58:45.559767: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "600/600 [==============================] - 12s 11ms/step - loss: 0.8433 - accuracy: 0.9295\n",
+      "600/600 [==============================] - 10s 9ms/step - loss: 1.8675 - accuracy: 0.9267\n",
       "Epoch 2/15\n",
-      "600/600 [==============================] - 6s 11ms/step - loss: 0.0639 - accuracy: 0.9799\n",
+      "600/600 [==============================] - 5s 9ms/step - loss: 0.0620 - accuracy: 0.9813\n",
       "Epoch 3/15\n",
-      "600/600 [==============================] - 7s 11ms/step - loss: 0.0443 - accuracy: 0.9858\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0356 - accuracy: 0.9888\n",
       "Epoch 4/15\n",
-      "600/600 [==============================] - 7s 11ms/step - loss: 0.0366 - accuracy: 0.9883\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0256 - accuracy: 0.9916\n",
       "Epoch 5/15\n",
-      "600/600 [==============================] - 6s 10ms/step - loss: 0.0292 - accuracy: 0.9905\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0266 - accuracy: 0.9912\n",
       "Epoch 6/15\n",
-      "600/600 [==============================] - 6s 10ms/step - loss: 0.0315 - accuracy: 0.9899\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0253 - accuracy: 0.9919\n",
       "Epoch 7/15\n",
-      "600/600 [==============================] - 6s 11ms/step - loss: 0.0250 - accuracy: 0.9920\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0262 - accuracy: 0.9918\n",
       "Epoch 8/15\n",
-      "600/600 [==============================] - 6s 11ms/step - loss: 0.0266 - accuracy: 0.9919\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0192 - accuracy: 0.9938\n",
       "Epoch 9/15\n",
-      "600/600 [==============================] - 6s 11ms/step - loss: 0.0201 - accuracy: 0.9939\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0224 - accuracy: 0.9931\n",
       "Epoch 10/15\n",
-      "600/600 [==============================] - 6s 11ms/step - loss: 0.0219 - accuracy: 0.9936\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0245 - accuracy: 0.9929\n",
       "Epoch 11/15\n",
-      "600/600 [==============================] - 6s 10ms/step - loss: 0.0228 - accuracy: 0.9933\n",
+      "600/600 [==============================] - 4s 7ms/step - loss: 0.0182 - accuracy: 0.9945\n",
       "Epoch 12/15\n",
-      "600/600 [==============================] - 6s 11ms/step - loss: 0.0220 - accuracy: 0.9937\n",
+      "600/600 [==============================] - 4s 7ms/step - loss: 0.0203 - accuracy: 0.9940\n",
       "Epoch 13/15\n",
-      "600/600 [==============================] - 7s 11ms/step - loss: 0.0212 - accuracy: 0.9939\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0174 - accuracy: 0.9950\n",
       "Epoch 14/15\n",
-      "600/600 [==============================] - 7s 11ms/step - loss: 0.0219 - accuracy: 0.9939\n",
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0206 - accuracy: 0.9943\n",
       "Epoch 15/15\n",
-      "600/600 [==============================] - 7s 11ms/step - loss: 0.0178 - accuracy: 0.9953\n"
+      "600/600 [==============================] - 5s 8ms/step - loss: 0.0203 - accuracy: 0.9945\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fe410059ac0>"
+       "<keras.callbacks.History at 0x7f53cc146760>"
       ]
      },
      "execution_count": 8,
@@ -458,36 +458,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100/100 [==============================] - 2s 12ms/step - loss: 0.0782 - accuracy: 0.9864\n",
-      "Test accuracy: 0.9864000082015991\n",
+      "100/100 [==============================] - 1s 11ms/step - loss: 0.1123 - accuracy: 0.9820\n",
+      "Test accuracy: 0.9819999933242798\n",
       "summary: \n",
-      "Model: \"variation_model\"\n",
+      "Model: \"simple_model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
       " input_3 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
       "                                                                 \n",
-      " conv2d (Conv2D)             (None, 28, 28, 32)        320       \n",
+      " conv2d (Conv2D)             (None, 28, 28, 32)        832       \n",
       "                                                                 \n",
       " max_pooling2d (MaxPooling2D  (None, 14, 14, 32)       0         \n",
       " )                                                               \n",
       "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 14, 14, 64)        51264     \n",
+      " flatten (Flatten)           (None, 6272)              0         \n",
       "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 7, 7, 64)         0         \n",
-      " 2D)                                                             \n",
+      " dense (Dense)               (None, 256)               1605888   \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 3136)              0         \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 1024)              3212288   \n",
-      "                                                                 \n",
-      " dropout (Dropout)           (None, 1024)              0         \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                10250     \n",
+      " dense_1 (Dense)             (None, 10)                2570      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 3,274,122\n",
-      "Trainable params: 3,274,122\n",
+      "Total params: 1,609,290\n",
+      "Trainable params: 1,609,290\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -508,7 +501,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save('CNNModel/variationCNN.keras')"
+    "model.save('CNNModel/simpleCNN.keras')"
    ]
   },
   {
